[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture2D" id=1]
[ext_resource path="res://theme/HeadingsFont.tres" type="FontFile" id=2]
[ext_resource path="res://contexts/save/SaveSlot.gd" type="Script" id=3]

[node name="SaveSlot" type="NinePatchRect"]
self_modulate = Color( 0.494118, 0.494118, 0.494118, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -680.0
offset_bottom = -470.0
custom_minimum_size = Vector2( 1248, 200 )
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 1232.0
offset_bottom = 234.0

[node name="SlotLabel" type="Label" parent="MarginContainer/VBoxContainer"]
offset_right = 1216.0
offset_bottom = 39.0
text = "Slot 0"
valign = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 43.0
offset_right = 1216.0
offset_bottom = 142.0

[node name="MainLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
offset_left = 497.0
offset_right = 718.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource( 2 )
text = "Empty"
align = 1

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
offset_top = 146.0
offset_right = 1216.0
offset_bottom = 185.0
text = "Game time: 0:00"
valign = 2
